--- a/merrill/package.json
+++ b/merrill/package.json
@@ -13,7 +13,7 @@
 		"mongodb": "1.3.11",
 		"mongoose": "3.6.14",
 		"mocha" : "1.12.x",
-		"should" : "1.2.x",
+		"chai" : "*",
 		"jQuery" : "1.7.x",	
 		"supertest" : "0.7.x",
 		"less-middleware" : "*"	
